atempt to fix letter spacing

--- a/src/Style/grid.css
+++ b/src/Style/grid.css
@@ -158,18 +158,19 @@ h2 {
     padding-top: 0.3vw;
     padding-left: 0.5vw;
     padding-right: 0.5vw;
+    height: 100%;
 }
 
 .notesArea p {
     font-family: oswald;
-    font-weight: 300;
+    font-weight: 200;
     font-size: 1.1vw;
     line-height: 1.1vw;
 }
 
 .notesArea p b {
     font-family: oswald;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .hidden {
@@ -328,7 +329,7 @@ h2 {
 
 .oswald {
     font-family: oswald;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 1.25vw;
 }
 
@@ -359,7 +360,7 @@ h2 {
     color: black;
     font-size: 1.25vw;
     line-height: 1.5vw;
-    font-weight: 300;
+    font-weight: 200;
     margin-bottom: 1vw;
     margin-top: 5px;
 }
@@ -369,13 +370,13 @@ h2 {
     color: black;
     font-size: 1vw;
     line-height: 1.25vw;
-    font-weight: 300;
+    font-weight: 200;
 }
 
 .ability b {
     font-family: oswald;
     color: black;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .activated {
